tests/paczka1/small_fuzzy/63342376.err
Error in line 9: qNEMv9 A188 68,6
Error in line 14: A188 A520 14,1
